Filter examples to show only renderable deck files
Decksh supports two types of files:
1. Library/definition files: Only contain def/edef blocks for reuse
2. Complete deck files: Contain deck/edeck structure (renderable)

Changes:
- Add ?renderable=true query parameter to /examples endpoint
- Filter to only show files containing deck/edeck structure
- Update demo UI to use filtered list (116 vs 275 total)
- Add 'renderable' field to API response

This prevents errors when users try to render definition-only files
like warlife/a.dsh, warlife/c.dsh, walk/route.dsh, etc.

Files now filtered:
- Before: 275 total .dsh files
- After: 116 renderable deck files
- Hidden: 159 library/definition files

--- a/demo/index.html
+++ b/demo/index.html
@@ -327,7 +327,7 @@ edeck</textarea>
         // Load examples list from API
         async function loadExamplesList() {
             try {
-                const response = await fetch(API_BASE + '/examples');
+                const response = await fetch(API_BASE + '/examples?renderable=true');
                 examplesList = await response.json();
 
                 // Populate dropdown
