Add URL routing for shareable deck links
Problem: Generated SVG contains temporary file paths in links, making decks hard to share and navigate
Solution: Implement proper URL routing with in-memory caching

Server changes (cmd/wazero/main.go):
- Added DeckCache for in-memory deck storage
- Implemented /deck/:examplePath/slide/:num.svg routing
- Implemented /deck/:examplePath/asset/:filename for images
- Added SVG link rewriting to convert temp paths to URLs
- Link pattern: /var/.../deck-00001.svg → /deck/example/slide/1.svg
- Asset pattern: image.png → /deck/example/asset/image.png

Demo UI changes (demo/index.html):
- Added Share button (📤 Share) to open deck in new tab
- Button enabled only when viewing example decks
- Opens current slide at /deck/:path/slide/:num.svg
- Updates state when manually editing source

Testing:
- B-17 deck: assets served correctly, single slide works
- Elections deck: multi-slide navigation confirmed (1→2→3→4)
- Share button opens deck URLs in new tab
- SVG self-contained with relative /deck/ URLs

Benefits:
- Decks are now shareable via direct URLs
- Navigation between slides works in browser
- Assets load correctly with proper paths
- In-memory cache improves performance
- No more temporary file path leaks

--- a/demo/index.html
+++ b/demo/index.html
@@ -202,6 +202,7 @@ edeck</textarea>
                     <button id="prev" disabled>&larr; Prev</button>
                     <span class="slide-info" id="slideInfo">-</span>
                     <button id="next" disabled>Next &rarr;</button>
+                    <button id="shareDeck" disabled style="margin-left: auto;" title="Open deck in new tab">📤 Share</button>
                 </div>
             </div>
         </div>
@@ -237,6 +238,7 @@ edeck</textarea>
         const prevBtn = document.getElementById('prev');
         const nextBtn = document.getElementById('next');
         const slideInfoEl = document.getElementById('slideInfo');
+        const shareDeckBtn = document.getElementById('shareDeck');
         const examplesEl = document.getElementById('examples');
         const apiSelectEl = document.getElementById('apiSelect');
 
@@ -266,6 +268,8 @@ edeck</textarea>
             prevBtn.disabled = currentSlide <= 0;
             nextBtn.disabled = currentSlide >= slides.length - 1;
             slideInfoEl.textContent = slides.length > 0 ? `${currentSlide + 1} / ${slides.length}` : '-';
+            // Enable share button only when viewing a deck from examples
+            shareDeckBtn.disabled = !currentSourcePath || slides.length === 0;
         }
 
         function showSlide(index) {
@@ -321,9 +325,17 @@ edeck</textarea>
         prevBtn.addEventListener('click', () => showSlide(currentSlide - 1));
         nextBtn.addEventListener('click', () => showSlide(currentSlide + 1));
 
+        shareDeckBtn.addEventListener('click', () => {
+            if (currentSourcePath) {
+                const deckUrl = `${API_BASE}/deck/${currentSourcePath}/slide/${currentSlide + 1}.svg`;
+                window.open(deckUrl, '_blank');
+            }
+        });
+
         // Clear source path when user manually edits
         sourceEl.addEventListener('input', () => {
             currentSourcePath = '';
+            updateNav(); // Update share button state
         });
 
         // Load examples list from API
