Fix: Enable in-deck link navigation in demo UI
Problem: Clicking navigation links inside SVG decks didn't work - links had temp file paths and weren't intercepted
Root causes:
1. /process endpoint wasn't rewriting links (only /deck/ routes did)
2. Demo UI wasn't intercepting SVG link clicks

Server fix (cmd/wazero/main.go):
- Apply rewriteSVGLinks() in /process endpoint when source path provided
- Rewrites temp paths to /deck/:path/slide/:num.svg format
- Ensures consistent link format for both API and deck routes

Demo UI fix (demo/index.html):
- Added click event handler to intercept SVG <a> clicks
- Parses slide number from rewritten URLs
- Calls showSlide() to navigate within demo instead of page navigation
- Fixed tagName check to use lowercase for SVG elements

Testing:
- Elections deck: Successfully navigated 1→2→3→2 via clicks and buttons
- Links properly rewritten from temp paths to /deck/elections/elections.dsh/slide/N.svg
- Both clicking SVG links and using arrow buttons works
- Share button still opens deck in new tab at correct URL

Result: Full deck navigation now works in demo UI - users can click anywhere on slides to advance

--- a/demo/index.html
+++ b/demo/index.html
@@ -277,6 +277,39 @@ edeck</textarea>
                 currentSlide = index;
                 previewEl.innerHTML = slides[index];
                 updateNav();
+
+                // Intercept clicks on SVG links to navigate within demo instead of away from it
+                const svg = previewEl.querySelector('svg');
+                if (svg) {
+                    svg.addEventListener('click', (e) => {
+                        // Find if click was on or inside an <a> element
+                        let target = e.target;
+                        while (target && target !== svg) {
+                            // SVG uses lowercase tag names
+                            if (target.tagName.toLowerCase() === 'a') {
+                                // Prevent navigation
+                                e.preventDefault();
+                                e.stopPropagation();
+
+                                // Check if this is a slide navigation link
+                                const href = target.getAttribute('xlink:href') || target.getAttribute('href');
+                                if (href) {
+                                    // Parse slide number from /deck/path/slide/N.svg
+                                    const match = href.match(/\/slide\/(\d+)\.svg$/);
+                                    if (match) {
+                                        const slideNum = parseInt(match[1], 10);
+                                        // Navigate to that slide (convert from 1-indexed to 0-indexed)
+                                        if (slideNum >= 1 && slideNum <= slides.length) {
+                                            showSlide(slideNum - 1);
+                                        }
+                                    }
+                                }
+                                return false;
+                            }
+                            target = target.parentElement;
+                        }
+                    });
+                }
             }
         }
 
